--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
   },
   "homepage": "https://github.com/xvonabur/react-native-meteor#readme",
   "dependencies": {
-    "@react-native-community/netinfo": "^4.4.0",
     "@xvonabur/minimongo-cache": "^0.1.2",
     "base-64": "^0.1.0  ",
     "crypto-js": "^3.1.9-1",
@@ -49,6 +48,8 @@
   },
   "peerDependencies": {
     "react": "*",
-    "react-native": "^0.60.0"
+    "react-native": "^0.61.3",
+    "@react-native-community/async-storage": "^1.6.2",
+    "@react-native-community/netinfo": "^4.4.0"
   }
 }
